language/move-lang/tests/move_check/borrows/copy_field_invalid.exp
error[E07002]: mutable ownership violated
   ┌─ tests/move_check/borrows/copy_field_invalid.move:13:9
   │
12 │         let f = &mut s.f;
   │                 -------- It is still being mutably borrowed by this reference
13 │         copy s;
   │         ^^^^^^ Invalid copy of local 's'

error[E07002]: mutable ownership violated
   ┌─ tests/move_check/borrows/copy_field_invalid.move:19:9
   │
18 │         let f = id_mut(&mut s.f);
   │                 ---------------- It is still being mutably borrowed by this reference
19 │         copy s;
   │         ^^^^^^ Invalid copy of local 's'

